hphp/hack/test/typecheck/array_map.php.like_types.exp
File "array_map.php", line 9, characters 31-32:
Invalid argument (Typing[4110])
File "stdlib/builtins_array.hhi", line 115, characters 10-18:
Expected (function([unresolved], [unresolved]): [unresolved])
File "array_map.php", line 5, characters 3-31:
But got dynamic because it is an unenforceable type
